--- a/TP02/TP2L05/Windows/UI.Desktop.csproj
+++ b/TP02/TP2L05/Windows/UI.Desktop.csproj
@@ -55,12 +55,6 @@
     <Compile Include="ABMListForms\Comisiones.Designer.cs">
       <DependentUpon>Comisiones.cs</DependentUpon>
     </Compile>
-    <Compile Include="ABMListForms\Materias.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ABMListForms\Materias.Designer.cs">
-      <DependentUpon>Materias.cs</DependentUpon>
-    </Compile>
     <Compile Include="DesktopForms\ApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +121,12 @@
     <Compile Include="ABMListForms\Planes.Designer.cs">
       <DependentUpon>Planes.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABMListForms\Materias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMListForms\Materias.Designer.cs">
+      <DependentUpon>Materias.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectForms\SelectEspecialidad.cs">
@@ -158,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DesktopForms\EspecialidadDesktop.resx">
       <DependentUpon>EspecialidadDesktop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DesktopForms\MateriaDesktop.resx">
+      <DependentUpon>MateriaDesktop.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DesktopForms\PlanDesktop.resx">
       <DependentUpon>PlanDesktop.cs</DependentUpon>
